[package]
name = "ssping"
description = "Command-line tool for testing connectivity of Shadowsocks server."
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/upsuper/ssping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
shadowsocks = "1.18"
tokio = { version = "1.37", features = ["macros", "rt", "signal"] }
url = "2.5.0"
